tests/lean/448.lean.expected.out
448.lean:21:2-23:20: error: failed to synthesize
  MonadExceptOf IO.Error M
use `set_option diagnostics true` to get diagnostic information
